--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -16,3 +16,4 @@ jobs:
           subDir: "conda"
           AnacondaToken: ${{ secrets.ANACONDA_TOKEN }}
           publish: true
+          test_all: true
