--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: data_analysis_helper
-  version: 0.12.0
+  version: 0.13.0
 
 source:
   path: ..
@@ -16,6 +16,7 @@ requirements:
     - root
     - lhcbstyle
     - numpy
+    - scipy
     - matplotlib
     - mplhep
 
